--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,24 @@
-# Node
-node_modules/
-dist/
-build/
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Rust
-/target
+node_modules
+dist
+dist-ssr
+*.local
 
-# VS Code
-.vscode/
-
-# OS
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-Thumbs.db
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
